<resources>
    <string name="app_name">MoniCA</string>
    <string name="hello">Touch button to start recording…</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="record">Record</string>
    <string name="storage">Storage</string>
    <string name="back_to_records">Back To Records</string>
    <string name="title_activity_new">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="recording">recording</string>
    <string name="record_too_short">Record too short</string>
    <string name="adresy_email">Adresy Email</string>
    <string name="create">Utwórz</string>
    <string name="name_of_the_meeting">Nazwa Spotkania</string>
    <string name="meeting_name">Nazwa Spotkania</string>
    <string name="size">Rozmiar</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="check">Check all</string>
    <string name="edit">Edit</string>
    <string name="meeting">meeting</string>
    <string name="appName">moniCA</string>
    <string name="appDescription">makes your mettings simpler…</string>
    <string name="settings">Settings</string>
    <string name="newMeeting">New</string>
    <string name="open">Open</string>
    <string name="search_title">Search meeting</string>
    <string name="permission_message">It is needed!</string>
</resources>
