<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="402dp"
        android:layout_height="203dp"
        app:srcCompat="@drawable/logo2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="73dp" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/new_meeting_button_selector"
                android:id="@+id/button_new"
                android:background="@android:color/transparent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newMeeting"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="30sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/open_meeting_button_selector"
                android:id="@+id/button_open"
                android:background="@android:color/transparent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="30sp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_button_selector"
                android:id="@+id/button_settings"
                android:background="@android:color/transparent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>