<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/hello" />


    <TextView
        android:id="@+id/sizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/sizeOfSelectedItemsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ftp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="FTP" />

        <Button
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Email" />

        <Button
            android:id="@+id/storageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="goToStorage"
            android:text="@string/storage"
            tools:text="Storage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/willNotText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="Will Not"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/couldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="Could"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/shouldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="Should"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/mustText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="Must"
                android:textAlignment="center" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/priorityBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="3"
            android:progress="0"
            android:thumb="@android:drawable/btn_radio" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.example.powder.monica.TouchableButton
            android:id="@+id/recordButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/record_button_selector"
            android:text="@string/record" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="makePhoto"
            android:src="@drawable/photo_button_selector" />

    </LinearLayout>

</LinearLayout>